# srm-monitor

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  test.json
docker/: entrypoint-data-api.sh  entrypoint-monitor-service.sh  entrypoint-web-ui.sh  srm-data-api.Dockerfile  srm-monitor-service.Dockerfile  srm-web-ui.Dockerfile
scripts/: start-gui-stack.sh
srm-common/: Cargo.toml
srm-common/src/: config.rs  lib.rs  models.rs  synology.rs
srm-data-api/: Cargo.toml
srm-data-api/config/: api.example.toml
srm-data-api/src/: main.rs
srm-monitor/: Cargo.toml
srm-monitor-service/: Cargo.toml
srm-monitor-service/config/: service.example.toml
srm-monitor-service/src/: main.rs
srm-monitor/config/: gui.example.toml
srm-monitor/src/: graph.rs  main.rs  monitor.rs  profiling.rs  synology.rs
srm-web-ui/: Cargo.toml
srm-web-ui/config/: web.example.toml
srm-web-ui/src/: main.rs
