[workspace]
members = [
    "srm-common",
    "srm-data-api",
    "srm-monitor",
    "srm-monitor-service",
    "srm-web-ui",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
bson = { version = "3.1.0", features = ["chrono-0_4", "serde"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde", "std"] }
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "wgpu"] }
egui_plot = "0.34.1"
futures-util = "0.3"
mongodb = { version = "3.5.1", default-features = false, features = ["bson-3", "compat-3-3-0", "dns-resolver", "rustls-tls"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
ureq = { version = "3.2.0", features = ["json"] }