[package]
name = "srm-data-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bson.workspace = true
chrono.workspace = true
futures-util.workspace = true
mongodb.workspace = true
serde.workspace = true
tokio.workspace = true
srm-common = { path = "../srm-common" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }