[package]
name = "srm-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.6"
ureq = { version = "3.2.0", features = ["cookies", "json"] }
serde_json = "1.0"
