[package]
name = "srm-graph-gui"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
eframe.workspace = true
egui_plot.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ureq.workspace = true
srm-common = { path = "../srm-common" }
